--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint-plugin-vue": "^9.9.0",
     "sass": "^1.58.0",
+    "svg-inline-loader": "^0.8.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1",
+    "vue-svg-loader": "^0.16.0",
     "vue-tsc": "^1.0.24"
   }
 }
