--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://jakubkedzierski92.github.io/Passwordo/",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview",
     "prettier": "npx prettier --write ./src/**/*.{vue,js,ts,tsx,scss}"
   },
   "dependencies": {
+    "vite": "^2.3.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
@@ -19,6 +23,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint-plugin-vue": "^9.9.0",
+    "gh-pages": "^5.0.0",
     "sass": "^1.58.0",
     "svg-inline-loader": "^0.8.2",
     "typescript": "^4.9.3",
